# dns-forwarder

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: DNSPacket.h  DNSPacketHandler.h  DNSParser.h  Request.h  Resolver.h  Types.h  UDPClient.h  UDPServer.h  UString.h  dns.h  udp_cl.h  udp_server.h  util.h
src/: DNSPacket.cpp  DNSPacketHandler.cpp  DNSParser.cpp  Resolver.cpp  UDPClient.cpp  UDPServer.cpp  UString.cpp  dns.cpp  main.cpp  udp_cl.cpp  udp_server.cpp
